--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -73,6 +73,14 @@ h6 {
   padding: 0 20px;
 }
 
+.container-header {
+  max-width: 1440px;
+}
+
+body {
+  font-family: "Red Hat Text", sans-serif;
+}
+
 body.locked {
   overflow: hidden;
 }
@@ -97,8 +105,36 @@ body.locked {
   }
 }
 
+.btn {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+  background-color: #0D606F;
+  border-radius: 10px;
+  padding: 10px 30px;
+  color: #FFFFFF;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  color: #F2785C;
+}
+
 nav {
-  background-color: rgba(0, 119, 134, 0.651);
+  background-color: #FFFFFF;
   overflow: hidden;
 }
 
@@ -107,49 +143,73 @@ nav {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  background-color: rgba(242, 120, 92, 0.7);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.logo a {
-  color: white;
+.nav__btns {
+  margin-left: auto;
+  margin-right: 120px;
+}
+
+.container-header {
+  max-width: 1440px;
+}
+
+.logo {
+  margin-left: 120px;
 }
 
 .menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.menu__item {
-  margin-left: 25px;
+  gap: 45px;
+  margin-left: 158px;
 }
 
 .menu__item-link {
-  color: white;
+  color: #FFFFFF;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.menu__item-link:hover,
+.menu__item-link:active {
+  color: #0D606F;
 }
 
 .burger {
   display: none;
   cursor: pointer;
+  margin-right: 20px;
 }
 
-.section__title {
-  font-size: 36px;
+footer {
+  display: block;
 }
 
 @media (max-width: 1449.98px) {
   .container {
-    max-width: 1200px;
+    max-width: 1440px;
   }
 }
 
 @media (max-width: 991.98px) {
   .container {
     max-width: 970px;
+  }
+
+  .navbar {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -183,9 +243,9 @@ nav {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    z-index: 22;
-    -webkit-animation: fade 0.1s linear;
-            animation: fade 0.1s linear;
+    z-index: 2;
+    -webkit-animation: fade 0.2s linear;
+            animation: fade 0.2s linear;
   }
 
   .burger {
@@ -193,7 +253,7 @@ nav {
     position: relative;
     height: 20px;
     width: 30px;
-    z-index: 102;
+    z-index: 2;
     cursor: pointer;
   }
 
@@ -266,6 +326,26 @@ nav {
 
   .menu__item-link {
     color: white;
+  }
+
+  .nav__btns.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 3;
+  }
+}
+
+@media screen and (max-width: 991.98px) and (max-width: 991.98px) {
+  .menu {
+    margin: 0;
+  }
+
+  .nav__btns {
+    display: none;
   }
 }
 
