--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -142,6 +142,7 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 90px;
   width: 100%;
   background-color: rgba(242, 120, 92, 0.7);
   -webkit-box-align: center;
@@ -154,8 +155,10 @@ nav {
   margin-right: 120px;
 }
 
-.container-header {
+.header-container {
   max-width: 1440px;
+  padding: 0;
+  background-image: url("../img/header-background.png");
 }
 
 .logo {
@@ -193,6 +196,101 @@ nav {
 
 footer {
   display: block;
+}
+
+.explore-container {
+  padding-left: 120px;
+  padding-bottom: 286px;
+  max-width: 1440px;
+  background-image: url(../img/header-background.png);
+  background-position: center -90px;
+  background-repeat: no-repeat;
+}
+
+.explore__item {
+  padding-top: 32px;
+  max-width: 892px;
+}
+
+.explore__title {
+  font-family: "Aleo", serif;
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 96px;
+  color: #FFFFFF;
+}
+
+.explore__subtitle {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  font-style: italic;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+  letter-spacing: 0.3;
+}
+
+.explore__search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  padding-top: 46px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.explore__btn {
+  position: absolute;
+  right: 10px;
+  top: 35px;
+  max-height: 59px;
+  width: 228px;
+  font-size: 24px;
+  line-height: 31.75px;
+}
+
+.explore__input {
+  display: block;
+  min-height: 95px;
+  min-width: 892px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 16px;
+  font-size: 24px;
+  line-height: 28.8px;
+  padding-left: 41px;
+}
+
+.explore__input::-webkit-input-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input::-moz-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input:-ms-input-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input::-ms-input-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input::placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
 }
 
 @media (max-width: 1449.98px) {
