--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -130,6 +130,7 @@ body.locked {
 }
 
 .btn:hover {
+  cursor: pointer;
   color: #F2785C;
 }
 
@@ -142,6 +143,7 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 90px;
   width: 100%;
   background-color: rgba(242, 120, 92, 0.7);
   -webkit-box-align: center;
@@ -154,8 +156,10 @@ nav {
   margin-right: 120px;
 }
 
-.container-header {
+.header-container {
   max-width: 1440px;
+  padding: 0;
+  background-image: url("../img/header-background.png");
 }
 
 .logo {
@@ -193,6 +197,278 @@ nav {
 
 footer {
   display: block;
+}
+
+.explore-container {
+  padding-left: 120px;
+  padding-bottom: 286px;
+  max-width: 1440px;
+  background-image: url(../img/header-background.png);
+  background-position: center -90px;
+  background-repeat: no-repeat;
+}
+
+.explore__item {
+  padding-top: 32px;
+  max-width: 892px;
+}
+
+.explore__title {
+  font-family: "Aleo", serif;
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 96px;
+  color: #FFFFFF;
+}
+
+.explore__subtitle {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  font-style: italic;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+  letter-spacing: 0.3;
+}
+
+.explore__search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  padding-top: 46px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.explore__btn {
+  position: absolute;
+  right: 10px;
+  top: 35px;
+  max-height: 59px;
+  width: 228px;
+  font-size: 24px;
+  line-height: 31.75px;
+}
+
+.explore__input {
+  display: block;
+  min-height: 95px;
+  min-width: 892px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 16px;
+  font-size: 24px;
+  line-height: 28.8px;
+  padding-left: 41px;
+}
+
+.explore__input::-webkit-input-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input::-moz-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input:-ms-input-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input::-ms-input-placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.explore__input::placeholder {
+  font-family: "Aleo", serif;
+  font-weight: 500;
+  color: #F2785C;
+}
+
+.section__steps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.section__title {
+  width: 100%;
+  font-family: "Red Hat Text", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 53px;
+  color: #F2785C;
+  text-align: center;
+  padding-bottom: 40px;
+  padding-top: 80px;
+}
+
+.steps {
+  max-width: 1177px;
+  padding-bottom: 97px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.steps__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 317px;
+          flex: 0 1 317px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+
+.steps__text {
+  font-family: "Aleo", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #0D606F;
+  text-align: center;
+}
+
+.section__destination h2 {
+  padding: 0;
+}
+
+.container {
+  max-width: 1400px;
+}
+
+.destination {
+  padding-top: 46px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  max-width: 1400px;
+  gap: 40px;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  padding-bottom: 24px;
+}
+
+.destination__item {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  min-width: 800px;
+  height: 800px;
+  border-radius: 16px;
+  background-size: cover;
+}
+
+.destination__item:nth-child(1) {
+  margin-left: -540px;
+  background-image: url(../img/Destination_1.png);
+}
+
+.destination__item:nth-child(2) {
+  background-image: url(../img/Destination_2.png);
+}
+
+.destination__item:nth-child(3) {
+  background-image: url(../img/Destination_3.png);
+}
+
+.destination__text {
+  position: absolute;
+  bottom: 40px;
+  left: 15px;
+  font-family: "Red Hat Text", sans-serif;
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 42px;
+}
+
+.destination__points {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 10px;
+  padding-bottom: 40px;
+}
+
+.destination__points .point {
+  display: block;
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  background-color: rgba(242, 120, 92, 0.5);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.destination__points .point:hover,
+.destination__points .point:active {
+  background-color: #F2785C;
+  cursor: pointer;
+}
+
+.destination__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  max-height: 59px;
+  width: 228px;
+  font-size: 24px;
+  line-height: 31.75px;
+  padding: 10px, 32px, 10px, 32px;
+  margin: 0 auto;
+}
+
+.destination__btn:hover a,
+.destination__btn:active a {
+  color: #F2785C;
+}
+
+.destination__btn a {
+  color: #FFFFFF;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 @media (max-width: 1449.98px) {
