--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -381,8 +381,8 @@ footer {
 
 .steps__item {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 330px;
-          flex: 0 1 330px;
+      -ms-flex: 0 1 320px;
+          flex: 0 1 320px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -396,8 +396,11 @@ footer {
   gap: 30px;
 }
 
+.steps__item:nth-child(2) {
+  margin-left: 20px;
+}
 .steps__item:nth-child(3) {
-  padding-right: 10px;
+  margin-right: 30px;
 }
 
 .steps__text {
@@ -421,7 +424,7 @@ footer {
   display: flex;
   overflow: hidden;
   max-width: 1400px;
-  gap: 40px;
+  gap: 60px;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   padding-bottom: 24px;
@@ -441,7 +444,7 @@ footer {
 }
 
 .destination__item:nth-child(1) {
-  margin-left: -550px;
+  margin-left: -560px;
   background-image: url(../img/Destination_1.jpg);
 }
 
@@ -590,20 +593,24 @@ footer {
   font-weight: 400;
   font-size: 35px;
   line-height: 42px;
+  margin-bottom: 20px;
 }
 
 .stories__paragraph {
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
-  line-height: 24px;
-  letter-spacing: 0.04px;
+  line-height: 25px;
+  letter-spacing: 0.01px;
+  width: 760px;
 }
 
 .stories__title {
   padding-top: 75px;
 }
-
+.stories__buttton-container{
+  margin-top: 10px;
+}
 footer {
   display: block;
 }
