--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -139,6 +139,10 @@ body.locked {
   color: #F2785C;
 }
 
+.inactive {
+  opacity: 0.5;
+}
+
 nav {
   background-color: #FFFFFF;
   overflow: hidden;
@@ -432,11 +436,29 @@ footer {
   margin: 0;
 }
 
+.destination__arrow {
+  display: none;
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  background-image: url(../img/destination_arrow.svg);
+  z-index: 3;
+}
+
+.destination__arrow--left {
+  bottom: 170px;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.destination__arrow--right {
+  bottom: 170px;
+  right: 20px;
+}
+
 .destination__item {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   width: 800px;
@@ -490,7 +512,7 @@ footer {
   height: 20px;
   width: 20px;
   border-radius: 10px;
-  background-color: rgba(242, 120, 92, 0.5);
+  background-color: #F2785C;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -517,6 +539,11 @@ footer {
   line-height: 31.75px;
   padding: 10px, 32px, 10px, 32px;
   margin: 0 auto;
+}
+
+.destination__btn img {
+  height: 10px;
+  width: 10px;
 }
 
 .destination__btn:hover a,
@@ -676,7 +703,7 @@ footer {
     display: none;
   }
 
-  .destination__item:nth-child(3) {
+  .destination__item:nth-child(2) {
     display: none;
   }
 }
@@ -964,6 +991,10 @@ footer {
     padding: 20px 0;
   }
 
+  .steps {
+    padding-bottom: 0px;
+  }
+
   .steps__item {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 0px;
@@ -983,6 +1014,11 @@ footer {
     text-align: right;
   }
 
+  .steps__text--center {
+    display: block;
+    width: 120px;
+  }
+
   .steps__icon {
     height: 70px;
   }
@@ -991,5 +1027,72 @@ footer {
     height: 70px;
     width: 70px;
     margin-bottom: 19px;
+  }
+
+  .section__destination h2 {
+    padding-top: 20px;
+  }
+
+  .destination-container {
+    position: relative;
+  }
+
+  .destination {
+    padding-top: 20px;
+    position: relative;
+    padding-bottom: 17.5px;
+  }
+
+  .destination__arrow {
+    display: block;
+  }
+
+  .destination__item:nth-child(1) {
+    display: block;
+    margin-left: 0px;
+    height: 210px;
+    background-image: url(../img/Destination_1_390.jpg);
+  }
+
+  .destination__item:nth-child(3) {
+    display: none;
+  }
+
+  .destination__item:nth-child(3) {
+    display: none;
+  }
+
+  .destination__text {
+    font-size: 20px;
+    line-height: 26.64px;
+    top: 8px;
+  }
+
+  .destination__points {
+    position: absolute;
+    bottom: 60px;
+    left: calc(50% - 20px);
+    gap: 6px;
+  }
+
+  .destination__points .point {
+    height: 8px;
+    width: 8px;
+  }
+
+  .destination__btn {
+    font-size: 11px;
+    line-height: 14.55px;
+    height: 30px;
+    width: 92px;
+    padding: 7.5px 10px;
+  }
+
+  .stories__title {
+    padding-bottom: 10px;
+  }
+
+  .stories__text {
+    max-width: 195px;
   }
 }
