--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -153,7 +153,7 @@ nav {
   display: flex;
   gap: 10px;
   margin-left: 158px;
-
+  z-index: 2px;
 }
 .menu__item-link {
   color: #fff;
@@ -653,6 +653,10 @@ footer {
 .btn__login {
   display: none;
 }
+.btn__arrow {
+  display: block;
+  height: 30px;
+}
 .navbar {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
@@ -722,7 +726,7 @@ footer {
 .burger.active-burger{
   position: absolute;
   opacity: 0.7;
-  right: 120px;
+  right: 100px;
   top: -20px;
   transform: translateX(0%);
 }
@@ -1041,7 +1045,12 @@ footer {
   font-size: 11px;
   line-height: 13px;
 }
-
+.stories-container{
+  background-image: linear-gradient(to bottom, rgb(154, 154, 154, 0.6), rgb(154, 154, 154, 0.6)), 
+  url(../img/stories-background-390.png);
+  background-position: center 0px;
+  background-size: cover;
+}
 .stories__img {
   height: 130px;
   width: 155px;
@@ -1056,6 +1065,10 @@ footer {
   font-size: 9px;
   line-height: 8.4px;
 }
+.footer-container {
+  background-image: url(../img/stories-background-390.png);
+  background-position: center -2020px;
+}
 .credits {
   display: none;
 }
@@ -1067,7 +1080,9 @@ footer {
  
 }
 @media (max-width:560px) {
-  
+  .btn__arrow {
+    height: 13px;
+  }
   .destination__item:nth-child(1) {
     display: block;
     margin-left: 0;
@@ -1091,4 +1106,21 @@ footer {
     margin-left: -6px;
     margin-top: -3px;
   }
+}
+.popup{
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(41, 41, 41, 0.6);
+  -webkit-transition: all 1s ease 0s;
+  transition: all 1s ease 0s;
+}
+.popup--open{
+  opacity: 1;
+  visibility: visible;
+  z-index: 1;
 }
