--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -799,6 +799,67 @@ footer {
   bottom: 0;
 }
 }
+
+
+.modal__wrapper {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    display: none;
+
+ 
+}
+.modal {
+  background: linear-gradient(to bottom,#FFFFFF, 80%,#1b7d8ff9);
+  padding: 25px 45px ;
+  border-radius: 5px;
+  max-height: 660px;
+  max-width: 650px;
+  
+}
+.modal__title {
+  text-align: center;
+  font-family: Aleo, serif;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 38.4px;
+  color: #0d606f;
+}
+.modal__close {
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 30px;
+    height: 50px;
+    width: 150px;
+    cursor: pointer;
+}
+.modal__body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+
+
+
+
+
 @media screen and (max-width:991.98px) and (max-width:991.98px) {
   .menu {
   margin: 0;
