--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -650,9 +650,7 @@ footer {
   .container {
   max-width: 970px;
 }
-.btn__login {
-  display: none;
-}
+
 .btn__arrow {
   display: block;
   height: 30px;
@@ -819,8 +817,8 @@ footer {
 .modal {
   background: linear-gradient(to bottom,#FFFFFF, 80%,#1b7d8ff9);
   padding: 25px 45px ;
-  border-radius: 5px;
-  max-height: 660px;
+  border-radius: 20px;
+  height: 660px;
   max-width: 650px;
   
 }
@@ -854,10 +852,95 @@ footer {
   align-items: center;
 
 }
-
-
-
-
+.modal__input{
+  display: flex;
+  height: 54px;
+  width: 560px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #0d606f;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Red Hat Text', sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  font-style: normal;
+  cursor: pointer;
+  letter-spacing: 0.8px;
+  box-shadow:0px 1px 1px #00000069;
+}
+.modal__input--facebook{
+  margin-top: 35px;
+  margin-bottom: 10px;
+  background-color: #1877F2;
+  color: #fff;
+}
+.modal__input--google{
+  margin-top: 10px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  
+}
+.modal__input--or{
+    background-color: rgba(255, 255, 255, 0);
+  box-shadow: none;
+  
+}
+.modal__input--regular{
+margin-bottom: 20px;
+padding-left: 10px;
+  
+}
+.input__p{
+padding-bottom: 1px;
+font-family: Aleo, serif;
+font-size: 16px;
+line-height: 19.2px;
+color: #0d606f;
+margin-right: auto;
+}
+.modal__input--signin{
+  background-color: #0d606f;
+  color: #fff;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.modal__line{
+  height: 0.5px;
+  width: 100%;
+  background: #0d606f71;
+  margin-left: 3px;
+  margin-right: 3px;
+}
+.modal__logo{
+  height: 24px;
+  width: 24px;
+  margin-right: 15px;
+}
+.modal__logo--facebook{
+  background-image: url('../img/Facebook-Logo.svg');
+}
+.modal__logo--google{
+  background-image: url('../img/Google-Logo.svg');
+}
+.modal__a{
+  font-family: Aleo, serif;
+  color: #0d606f;
+  font-weight: 700;
+  border-bottom: 1px solid #0d606f;
+  margin-bottom: 26px;
+  letter-spacing: 0.5px;
+}
+.modal__register{
+  padding-top: 20px;
+  padding-bottom: 23px;
+  color: #0d606f;
+  letter-spacing: 0.5px;
+}
+.modal__close{
+  display: none;
+  }
 
 
 @media screen and (max-width:991.98px) and (max-width:991.98px) {
@@ -931,6 +1014,9 @@ footer {
   height: 225px;
 }
 }@media (max-width:390.98px) {
+  .btn__login {
+    display: none;
+  }
   .navbar {
   background-color: rgba(242, 120, 92, 0);
 }
@@ -1184,4 +1270,23 @@ footer {
   opacity: 1;
   visibility: visible;
   z-index: 1;
+}
+
+@media (max-width:595px) {
+  
+  .modal__input{
+      width: 360px;
+    }
+    .modal__title {
+      line-height: 22.4px;
+      font-size: 20px;
+    }
+}
+@media (max-width:389px) {
+  .modal__input{
+      width: 300px;
+    }
+    .modal__close{
+      display: block;
+      }
 }
